--- a/Product.Service/Product.Service.csproj
+++ b/Product.Service/Product.Service.csproj
@@ -14,13 +14,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ECommerce.Shared" Version="2.0.0" />
+    <PackageReference Include="ECommerce.Shared" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.entityframeworkcore.design" Version="9.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="Product.Tests" />
   </ItemGroup>
 
 </Project>
